tests/fixtures/negative/modifiers/TestClassIsParallel.cls
@IsTest
public class MyTestClass {
    // Violation: Missing IsParallel=true
    @IsTest
    static void testMethod() {
    }
}

